Register and Login material-ui

--- a/my/package.json
+++ b/my/package.json
@@ -1,14 +1,38 @@
 {
   "name": "my",
+  "author": "Tigran Grigoryan <tigrangrigoryan.it@gmail.com> (https://github.com/Tigran-griig)",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/data-grid": "^4.0.0-alpha.13",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
+    "@material-ui/x-grid-data-generator": "^4.0.0-alpha.11",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.1",
+    "classnames": "^2.2.6",
+    "css-loader": "^5.0.1",
+    "date-fns": "^2.16.1",
+    "formik": "^2.2.6",
+    "lodash": "^4.17.20",
+    "node-sass": "4.14.1",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "sass-loader": "^10.1.0",
+    "scss": "^0.2.4",
+    "style-loader": "^2.0.0",
+    "tinycolor2": "^1.4.2",
+    "url-loader": "^4.1.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
